-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
None
-
Mageia 2 64 Bits, Windows XP 32 Bits, Linux
-
9d7fe3eb3dcb71926b3db65df835d45fc431eebb
Segmentation faults occur in QIcon::actualSize() or QIcon::pixmap() when using SVG icons.
The examples crash on Windows since the theme icon does not exist and QIcon::actualSize() is invoked from setWindowIon().
On Linux, running qtbug30496.tar results in an exit crash (exit_crash.txt) related to QIconPrivate destruction (note that the theme icon exists there; the SVG icon is just destroyed).
On Linux, when passing -c to qtbug30496.tar , QIcon::pixmap() is invoked and crashes (run_c_crash.txt).